photogallery HISTORY


photogallery v1.29 - 2009-04-12
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* bugfix: don't print help text when no arguments are given


photogallery v1.28 - 2008-12-27
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* bugfix: urlencode special characters
* bugfix: broken HTML without CSS
* bugfix: handle animated GIFs properly
* bugfix: speed up exif2text
* support video files
* include ISO in exif2text
* provide help texts
* version number handling


photogallery v1.27 - 2008-07-16
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* fix inclusion of version number in gallery footer
* add 'exif2text' to include EXIF tags in comments
* rename scripts to allow proper Debian packaging


photogallery v1.26 - 2008-07-13
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* create proper release tarball including all tools and short README


photogallery v1.25 - 2008-07-08
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

* begin the HISTORY file