@@ -72,10 +72,14 @@ releases:
     - release v1.29
 - !ditz.rubyforge.org,2008-03-06/release 
   name: v1.30
-  status: :unreleased
-  release_time: 
+  status: :released
+  release_time: 2009-04-13 22:09:14.629108 Z
   log_events: 
   - - 2009-04-12 10:56:25.526405 Z
     - Christian Garbs <mitch@cgarbs.de>
     - created
+    - ""
+  - - 2009-04-13 22:09:14.629140 Z
+    - Christian Garbs <mitch@cgarbs.de>
+    - released
     - ""
